--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -1,150 +1,141 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h3>Add Attribute</h3>
-      <i class="bi bi-columns"></i>
-      <span class="text-primary d-inline-flex focus-ring py-1 px-2 text-decoration-none">
-        {{ this.toString(this.formAddAttribute.controls.id.value) }}</span
-      >
-      <form [formGroup]="formAddAttribute" (ngSubmit)="submitForm()">
+  <h3>Add Attribute</h3>
+  <i class="bi bi-columns"></i>
+  <span class="text-primary d-inline-flex focus-ring py-1 px-2 text-decoration-none">
+    {{ this.toString(this.addAttributeFrom.controls.id.value) }}</span>
+  <form [formGroup]="addAttributeFrom" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
+    <div class="row g-3">
+      <div class="col border">
         <div class="row g-3">
-          <div class="col border">
-            <div class="row g-3">
-              <div class="col">
-                <div class="form-group">
-                  <label for="deviceId" class="form-label">Device</label>
-                  <select
-                    (change)="changeDeviceId($event)"
-                    formControlName="deviceId"
-                    class="form-select"
-                    id="deviceId">
-                    <option *ngFor="let deviceObj of deviceDictionary; let i = index" value="{{ deviceObj.id }}">
-                      {{ deviceObj.name }}
-                    </option>
-                  </select>
-                  <div>
-                    {{ this.toString(this.formAddAttribute.controls.deviceId.value) }}
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="form-group mb-2">
-                  <label for="modelId" class="form-label">Model</label>
-                  <select
-                    (change)="changeModelId($event)"
-                    formControlName="modelId"
-                    class="form-select"
-                    id="modelId">
-                    <option *ngFor="let modelObj of modelDictionary; let i = index" value="{{ modelObj.id }}">
-                      {{ modelObj.name }}
-                    </option>
-                  </select>
-                  <div *ngIf="this.formAddAttribute.controls.modelId.errors">
-                    <div *ngIf="this.formAddAttribute.controls.modelId.errors.required">modelId is required</div>
-                  </div>
-                  <div>
-                    {{ this.toString(this.formAddAttribute.controls.modelId.value) }}
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="form-group mb-2">
-                  <label for="connectionId" class="form-label">Connection</label>
-                  <select
-                    (change)="changeConnectionId($event)"
-                    formControlName="connectionId"
-                    class="form-select"
-                    id="connectionId">
-                    <option
-                      *ngFor="let connectionObj of connectionDictionary; let i = index"
-                      value="{{ connectionObj.id }}">
-                      {{ connectionObj.name }}
-                    </option>
-                  </select>
-                  <div *ngIf="this.formAddAttribute.controls.connectionId.errors">
-                    <div *ngIf="this.formAddAttribute.controls.connectionId.errors.required">
-                      connectionId is required
-                    </div>
-                  </div>
-                  <div>
-                    {{ this.toString(this.formAddAttribute.controls.connectionId.value) }}
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="col">
-            <div class="form-group mb-2">
-              <label for="attributeDictionaryId" class="form-label">Attribute Dictionary Id</label>
-              <select
-                (change)="changeAttributeDictionaryId($event)"
-                formControlName="attributeDictionaryId"
-                class="form-select"
-                id="attributeDictionaryId">
-                <option
-                  *ngFor="let attributeDictionaryObj of attributeDictionary; let i = index"
-                  value="{{ attributeDictionaryObj.id }}">
-                  {{ attributeDictionaryObj.name }}
+            <div class="form-group">
+              <label for="deviceId" class="form-label">Device</label>
+              <select (change)="changeDeviceId($event)" formControlName="deviceId" [ngClass]="{
+                  'is-invalid': addAttributeFrom.hasError('atLeastOneValidator'),
+                  'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
+                  'form-select': true
+                }" id="deviceId">
+                <option *ngFor="let deviceObj of deviceDictionary; let i = index" value="{{ deviceObj.id }}">
+                  {{ deviceObj.name }}
                 </option>
               </select>
-              <div *ngIf="this.formAddAttribute.controls.attributeDictionaryId.errors">
-                <div *ngIf="this.formAddAttribute.controls.attributeDictionaryId.errors.required">
-                  attributeDictionaryId is required
-                </div>
+              <div *ngIf="addAttributeFrom.hasError('atLeastOneValidator')" class="error-message">
+                One of field: device, model or connection is required
               </div>
-              <div>
-                {{ this.toString(this.formAddAttribute.controls.attributeDictionaryId.value) }}
+              <div class="log-message">
+                {{ this.toString(this.addAttributeFrom.controls.deviceId.value) }}
               </div>
-              <div class="invalid-feedback">Please select a valid state.</div>
             </div>
           </div>
-        </div>
-        <div class="row">
           <div class="col">
             <div class="form-group mb-2">
-              <label for="value" class="form-label">Value</label>
-              <input
-                type="text"
-                formControlName="value"
-                id="id"
-                required
-                class="form-control" />
-
-              <div class="invalid-feedback">Please select a valid state.</div>
-
-              <div *ngIf="formAddAttribute.get('value')?.invalid">
-                <div *ngIf="formAddAttribute.get('value')?.errors?.['required']">Value is required.</div>
-                <div *ngIf="formAddAttribute.get('value')?.errors?.['minlength']">
-                  Value must be at least 6 characters long.
-                </div>
+              <label for="modelId" class="form-label">Model</label>
+              <select (change)="changeModelId($event)" formControlName="modelId" [ngClass]="{
+                'is-invalid': addAttributeFrom.hasError('atLeastOneValidator'),
+                'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
+                'form-select': true
+              }" id="modelId">
+                <option *ngFor="let modelObj of modelDictionary; let i = index" value="{{ modelObj.id }}">
+                  {{ modelObj.name }}
+                </option>
+              </select>
+              <div *ngIf="addAttributeFrom.hasError('atLeastOneValidator')" class="error-message">
+                One of field: device, model or connection is required
+              </div>
+              <div class="log-message">
+                {{ this.toString(this.addAttributeFrom.controls.modelId.value) }}
               </div>
             </div>
           </div>
-        </div>
-        <div class="row">
           <div class="col">
-            <div class="form-group mb-3">
-              <button
-                type="submit"
-                [disabled]="!(this.formAddAttribute.valid && this.formAddAttribute.touched)"
-                class="btn btn-primary">
-                Add attribute
-              </button>
-              <div *ngIf="!(this.formAddAttribute.valid && this.formAddAttribute.touched)">Form is invalid</div>
-              <span class="text-danger" *ngIf="formAddAttribute.hasError('atLeastOneValidator')">
-                Fill one of Device, Model or Connection first.
-              </span>
-              <div>
-                {{ toString(formAddAttribute.value) }}
+            <div class="form-group mb-2">
+              <label for="connectionId" class="form-label">Connection</label>
+              <select (change)="changeConnectionId($event)" formControlName="connectionId" [ngClass]="{
+                'is-invalid': addAttributeFrom.hasError('atLeastOneValidator'),
+                'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
+                'form-select': true
+              }" id="connectionId">
+                <option *ngFor="let connectionObj of connectionDictionary; let i = index"
+                  value="{{ connectionObj.id }}">
+                  {{ connectionObj.name }}
+                </option>
+              </select>
+              <div *ngIf="addAttributeFrom.hasError('atLeastOneValidator')" class="error-message">
+                One of field: device, model or connection is required
               </div>
-              <div>
-                {{ formAddAttribute.hasError('atLeastOneValidator') }}
+              <div class="log-message">
+                {{ this.toString(this.addAttributeFrom.controls.connectionId.value) }}
               </div>
-
             </div>
           </div>
         </div>
-      </form>
+      </div>
+      <div class="col">
+        <div class="form-group mb-2">
+          <label for="attributeDictionaryId" class="form-label">Attribute Dictionary Id</label>
+          <select (change)="changeAttributeDictionaryId($event)" formControlName="attributeDictionaryId"
+          formControlName="attributeDictionaryId"
+          [ngClass]="{
+            'is-invalid': this.addAttributeFrom.controls.attributeDictionaryId.status != 'VALID',
+            'is-valid': this.addAttributeFrom.controls.attributeDictionaryId.status == 'VALID',
+            'form-select': true
+          }" id="attributeDictionaryId">
+            <option *ngFor="let attributeDictionaryObj of attributeDictionary; let i = index"
+              value="{{ attributeDictionaryObj.id }}">
+              {{ attributeDictionaryObj.name }}
+            </option>
+          </select>
+          <div *ngIf="this.addAttributeFrom.controls.attributeDictionaryId.errors" class="invalid-feedback">
+            <div *ngIf="this.addAttributeFrom.controls.attributeDictionaryId.errors.required">
+              attributeDictionaryId is required
+            </div>
+          </div>
+          <div class="log-message">
+            {{ this.toString(this.addAttributeFrom.controls.attributeDictionaryId.value) }}
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+    <div class="row">
+      <div class="col">
+        <div class="form-group mb-2">
+          <label for="value" class="form-label">Value</label>
+          <input type="text" formControlName="value" id="id" required [ngClass]="{
+            'is-invalid': this.addAttributeFrom.controls.value.status != 'VALID',
+            'is-valid': this.addAttributeFrom.controls.value.status == 'VALID',
+            'form-control': true
+          }" />
+          <div class="invalid-feedback">Please select a valid state.</div>
+          <div *ngIf="this.addAttributeFrom.controls.value.errors" class="invalid-feedback">
+            <div *ngIf="this.addAttributeFrom.controls.value.errors.required">Value is required</div>
+            <div *ngIf="this.addAttributeFrom.controls.value.errors.minlength">
+              Value must be at less 250 characters
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="form-group mb-3">
+          <button type="submit" [disabled]="!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)"
+            class="btn btn-primary">
+            Add attribute
+          </button>
+          <div *ngIf="!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)">Form is invalid</div>
+          <span class="text-danger" *ngIf="addAttributeFrom.hasError('atLeastOneValidator')">
+            Fill one of Device, Model or Connection first.
+          </span>
+          <div *ngIf="!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)" class="invalid-feedback">
+            Form is invalid
+          </div>
+          <div class="log-message">atLeastOneValidator: {{ addAttributeFrom.hasError('atLeastOneValidator') }}</div>
+          <div class="log-message">addAttributeFrom.value: {{ toString(addAttributeFrom.value) }}</div>
+          <div class="log-message">addAttributeFrom.valid: {{ toString(this.addAttributeFrom.valid) }}</div>
+          <div class="log-message">addAttributeFrom.touched: {{ toString(this.addAttributeFrom.touched) }}</div>
+
+        </div>
+      </div>
+    </div>
+  </form>
 </div>
