--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,16 @@ body {
   width: 100vw;
   height: 100vh;
 }
+.log-message {
+  margin-top: 4px;;
+  color: #9a9aa7;
+  font-size: small;
+}
+
+.error-message {
+  margin-top: 4px;;
+  font-size: 0.875em;
+  color: var(--bs-form-invalid-color);
+}
 @import '../node_modules/bootstrap-icons/font/bootstrap-icons';
 @import "../node_modules/bootstrap/scss/bootstrap";
