refactor: Update HTML templates for adding, editing, and listing attribute dictionaries
- Add icons to nav links in the app component
- Update header and table title in the attribute dictionary list component
- Update header in the add attribute dictionary component
- Update header and form validation in the edit attribute dictionary component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,15 +4,17 @@
       <a class="navbar-brand nav-link" id="title" routerLink="/home" routerLinkActive="active fluffy"
         ariaCurrentWhenActive="page">3d inventory</a>
       <a class="nav-link" routerLink="/home" routerLinkActive="active fluffy" ariaCurrentWhenActive="page">Home</a>
-      <a class="nav-link" routerLink="/cube" routerLinkActive="active" ariaCurrentWhenActive="page">Cube</a>
-      <a class="nav-link" routerLink="/device-list" routerLinkActive="active" ariaCurrentWhenActive="page">Devices</a>
-      <a class="nav-link" routerLink="/models-list" routerLinkActive="active" ariaCurrentWhenActive="page">Models</a>
+      <a class="nav-link" routerLink="/cube" routerLinkActive="active" ariaCurrentWhenActive="page"><i
+        class="bi bi-box"></i> Cube</a>
+      <a class="nav-link" routerLink="/device-list" routerLinkActive="active" ariaCurrentWhenActive="page"><i class="bi bi-hdd"></i> Devices</a>
+      <a class="nav-link" routerLink="/models-list" routerLinkActive="active" ariaCurrentWhenActive="page"><i
+          class="bi bi-motherboard"></i> Models</a>
       <a class="nav-link" routerLink="/attribute-list" routerLinkActive="active"
-        ariaCurrentWhenActive="page">Attributes</a>
+        ariaCurrentWhenActive="page"><i class="bi bi-bar-chart"></i> Attributes</a>
       <a class="nav-link" routerLink="/attribute-dictionary-list" routerLinkActive="active"
-        ariaCurrentWhenActive="page">Attribute Dictionary</a>
+        ariaCurrentWhenActive="page"><i class="bi bi-grid-3x3-gap"></i> Attribute Dictionary</a>
       <a class="nav-link" routerLink="/connection-list" routerLinkActive="active"
-        ariaCurrentWhenActive="page">Connections</a>
+        ariaCurrentWhenActive="page"><i class="bi bi-ethernet"></i> Connections</a>
       <form class="d-flex">
         <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search" />
         <button class="btn btn-outline-success" type="submit">Search</button>
