--- a/src/app/components/attribute-dictionary/add-attribute-dictionary/add-attribute-dictionary.component.html
+++ b/src/app/components/attribute-dictionary/add-attribute-dictionary/add-attribute-dictionary.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3>Add Attribute Dictionary</h3>
+  <h2><i class="bi bi-grid-3x3-gap"></i> Add Attribute Dictionary</h2>
   <form [formGroup]="addAttributeDictionaryForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
     <div class="form-group mb-3">
       <label for="id" class="form-label">Id</label>
