--- a/src/app/components/connection/edit-connection/edit-connection.component.html
+++ b/src/app/components/connection/edit-connection/edit-connection.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3>Edit Connection</h3>
+  <h2><i class="bi bi-ethernet"></i> Edit Connection</h2>
   {{ this.toString(this.editConnectionForm.controls.id.value) }}
   <form [formGroup]="editConnectionForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
     <div class="row">
