--- a/src/app/components/attribute-dictionary/edit-attribute-dictionary/edit-attribute-dictionary.component.html
+++ b/src/app/components/attribute-dictionary/edit-attribute-dictionary/edit-attribute-dictionary.component.html
@@ -1,11 +1,21 @@
 <div class="container">
-  <h3>Edit Attribute Dictionary</h3>
+  <h2><i class="bi bi-grid-3x3-gap"></i> Edit Attribute Dictionary</h2>
   <form [formGroup]="form" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
     <div class="row">
       <div class="col">
         <div class="form-group mb-3">
           <label for="id" class="form-label">Id</label>
-          <input type="text" formControlName="id" id="id" required readonly class="form-control" />
+          <input
+            type="text"
+            formControlName="id"
+            id="id"
+            required
+            readonly
+            [ngClass]="{
+              'is-invalid': this.form.controls.id.status != 'VALID',
+              'is-valid': this.form.controls.id.status == 'VALID',
+              'form-control': true
+            }" />
           <div *ngIf="this.form.controls.id.errors" class="invalid-feedback">
             <div *ngIf="this.form.controls.id.errors.required">Id is required</div>
             <div *ngIf="this.form.controls.id.errors.minlength">Id must be at least 4 characters</div>
@@ -18,6 +28,7 @@
           <textarea
             [ngClass]="{
               'is-invalid': this.form.controls.name.status != 'VALID',
+              'is-valid': this.form.controls.name.status == 'VALID',
               'form-control': true
             }"
             formControlName="name"
@@ -36,7 +47,15 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="type" class="form-label">Type</label>
-          <select (change)="changeType($event)" formControlName="type" class="form-control" id="type">
+          <select
+            (change)="changeType($event)"
+            formControlName="type"
+            [ngClass]="{
+              'is-invalid': this.form.controls.type.status != 'VALID',
+              'is-valid': this.form.controls.type.status == 'VALID',
+              'form-select': true
+            }"
+            id="type">
             <option *ngFor="let typeObj of deviceTypeDict.list; let i = index">
               {{ typeObj.name }}
             </option>
@@ -44,15 +63,20 @@
           <div *ngIf="this.form.controls.category.errors" class="invalid-feedback">
             <div *ngIf="this.form.controls.category.errors.required">Category is required</div>
           </div>
-          <div>
-            {{ this.toString(this.form.controls.category.dirty) }}
-          </div>
         </div>
       </div>
       <div class="col">
         <div class="form-group mb-3">
           <label for="category" class="form-label">Category</label>
-          <select (change)="changeCategory($event)" formControlName="category" class="form-control" id="category">
+          <select
+            (change)="changeCategory($event)"
+            formControlName="category"
+            [ngClass]="{
+              'is-invalid': this.form.controls.category.status != 'VALID',
+              'is-valid': this.form.controls.category.status == 'VALID',
+              'form-select': true
+            }"
+            id="category">
             <option *ngFor="let categoryObj of deviceCategoryDict.list; let i = index">
               {{ categoryObj.name }}
             </option>
@@ -65,7 +89,15 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="component" class="form-label">Component</label>
-          <select (change)="changeCategory($event)" formControlName="component" class="form-control" id="component">
+          <select
+            (change)="changeCategory($event)"
+            formControlName="component"
+            [ngClass]="{
+              'is-invalid': this.form.controls.component.status != 'VALID',
+              'is-valid': this.form.controls.component.status == 'VALID',
+              'form-select': true
+            }"
+            id="component">
             <option *ngFor="let componentObj of componentDictionary.list; let i = index">
               {{ componentObj.name }}
             </option>
