--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3>Add Attribute</h3>
+  <h2><i class="bi bi-bar-chart"></i> Add Attribute</h2>
   <i class="bi bi-columns"></i>
   <span class="text-primary d-inline-flex focus-ring py-1 px-2 text-decoration-none">
     {{ this.toString(this.addAttributeFrom.controls.id.value) }}</span>
@@ -129,10 +129,10 @@
           <div *ngIf="!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)" class="invalid-feedback">
             Form is invalid
           </div>
-          <div class="log-message">atLeastOneValidator: {{ addAttributeFrom.hasError('atLeastOneValidator') }}</div>
+          <!-- <div class="log-message">atLeastOneValidator: {{ addAttributeFrom.hasError('atLeastOneValidator') }}</div>
           <div class="log-message">addAttributeFrom.value: {{ toString(addAttributeFrom.value) }}</div>
           <div class="log-message">addAttributeFrom.valid: {{ toString(this.addAttributeFrom.valid) }}</div>
-          <div class="log-message">addAttributeFrom.touched: {{ toString(this.addAttributeFrom.touched) }}</div>
+          <div class="log-message">addAttributeFrom.touched: {{ toString(this.addAttributeFrom.touched) }}</div> -->
 
         </div>
       </div>
