--- a/src/app/components/attribute/attribute-list/attribute-list.component.html
+++ b/src/app/components/attribute/attribute-list/attribute-list.component.html
@@ -1,22 +1,19 @@
 <div class="container wrapper">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="inner">
-        <h2>Attributes</h2>
-        <table class="table table-striped table-hover">
-          <thead>
-            <tr>
-              <th scope="col">Id</th>
-              <th scope="col">Device</th>
-              <th scope="col">Model</th>
-              <th scope="col">Connection</th>
-              <th scope="col">Attribute Dictionary</th>
-              <th scope="col">Value</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr
-              *ngFor="
+  <div class="inner">
+    <h2><i class="bi bi-bar-chart"></i> Attributes</h2>
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Device</th>
+          <th scope="col">Model</th>
+          <th scope="col">Connection</th>
+          <th scope="col">Attribute Dictionary</th>
+          <th scope="col">Value</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="
                 let attribute of attributeList
                   | paginate
                     : {
@@ -25,54 +22,47 @@
                         currentPage: attributePage
                       }
               ">
-              <td><div tooltip="{{ attribute.id }}">#</div></td>
-              <td>
-                <div tooltip="{{ attribute.deviceId }}">{{ findDeviceName(attribute.deviceId) }}</div>
-              </td>
-              <td>
-                <div tooltip="{{ attribute.modelId }}">{{ findModelName(attribute.modelId) }}</div>
-              </td>
-              <td>
-                <div tooltip="{{ attribute.connectionId }}">{{ findConnectionName(attribute.connectionId) }}</div>
-              </td>
-              <td>
-                <div tooltip="{{ attribute.attributeDictionaryId }}">{{ findAttributeDictionary(attribute.attributeDictionaryId) }}</div>
-              </td>
-              <td>{{ attribute.value }}</td>
-              <td>
-                <div class="btn-group" role="group" aria-label="attribute-operations">
-                  <button
-                    type="button"
-                    class="btn btn-success btn-sm move-right"
-                    id="edit-attribute"
-                    (click)="EditAttribute(attribute)">
-                    Edit
-                  </button>
-                  <button
-                    type="button"
-                    id="delete-attribute"
-                    class="btn btn-danger btn-sm"
-                    (click)="DeleteAttribute(attribute.id)">
-                    Delete
-                  </button>
-                  <button
-                    type="button"
-                    id="clone-attribute"
-                    class="btn btn-info btn-sm"
-                    (click)="CloneAttribute(attribute.id)">
-                    Clone
-                  </button>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <button type="button" class="btn btn-success btn-sm move-right mb-3" (click)="AddAttribute()">
-          <i class="bi bi-plus-lg"></i> Add
-        </button>
-      </div>
-    </div>
+          <td>
+            <div tooltip="{{ attribute.id }}">#</div>
+          </td>
+          <td>
+            <div tooltip="{{ attribute.deviceId }}">{{ findDeviceName(attribute.deviceId) }}</div>
+          </td>
+          <td>
+            <div tooltip="{{ attribute.modelId }}">{{ findModelName(attribute.modelId) }}</div>
+          </td>
+          <td>
+            <div tooltip="{{ attribute.connectionId }}">{{ findConnectionName(attribute.connectionId) }}</div>
+          </td>
+          <td>
+            <div tooltip="{{ attribute.attributeDictionaryId }}">{{
+              findAttributeDictionary(attribute.attributeDictionaryId) }}</div>
+          </td>
+          <td>{{ attribute.value }}</td>
+          <td>
+            <div class="btn-group" role="group" aria-label="attribute-operations">
+              <button type="button" class="btn btn-success btn-sm move-right" id="edit-attribute"
+                (click)="EditAttribute(attribute)">
+                Edit
+              </button>
+              <button type="button" id="delete-attribute" class="btn btn-danger btn-sm"
+                (click)="DeleteAttribute(attribute.id)">
+                Delete
+              </button>
+              <button type="button" id="clone-attribute" class="btn btn-info btn-sm"
+                (click)="CloneAttribute(attribute.id)">
+                Clone
+              </button>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <button type="button" class="btn btn-success btn-sm move-right mb-3" (click)="AddAttribute()">
+      <i class="bi bi-plus-lg"></i> Add
+    </button>
   </div>
   <pagination-controls (pageChange)="attributePage = $event" id="attributeListPagination"></pagination-controls>
 </div>
+
 <app-log [component]="component"></app-log>
