--- a/src/app/components/attribute/edit-attribute/edit-attribute.component.html
+++ b/src/app/components/attribute/edit-attribute/edit-attribute.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3>Edit Attribute</h3>
+  <h2><i class="bi bi-bar-chart"></i> Edit Attribute</h2>
   <div>{{ this.toString(this.editAttributeForm.controls.id.value) }}</div>
   <form [formGroup]="editAttributeForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
     <div class="row">
@@ -123,13 +123,13 @@
             class="btn btn-primary">
             Update attribute
           </button>
-          <div *ngIf="!(this.editAttributeForm.valid && this.editAttributeForm.touched)" class="invalid-feedback">
+          <!-- <div *ngIf="!(this.editAttributeForm.valid && this.editAttributeForm.touched)" class="invalid-feedback">
             Form is invalid
           </div>
           <div class="log-message">atLeastOneValidator: {{ editAttributeForm.hasError('atLeastOneValidator') }}</div>
           <div class="log-message">editAttributeForm.value: {{ toString(editAttributeForm.value) }}</div>
           <div class="log-message">this.editAttributeForm.valid: {{ toString(this.editAttributeForm.valid) }}</div>
-          <div class="log-message">this.editAttributeForm.touched: {{ toString(this.editAttributeForm.touched) }}</div>
+          <div class="log-message">this.editAttributeForm.touched: {{ toString(this.editAttributeForm.touched) }}</div> -->
         </div>
       </div>
     </div>
