--- a/src/app/components/connection/connection-list/connection-list.component.html
+++ b/src/app/components/connection/connection-list/connection-list.component.html
@@ -1,19 +1,15 @@
 <div class="container wrapper">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="inner">
-        <h2>Connections</h2>
-        <table class="table table-striped table-hover">
-          <thead>
-            <tr>
-              <th scope="col">Name</th>
-              <th scope="col">Device From</th>
-              <th scope="col">Device To</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr
-              *ngFor="
+  <h2><i class="bi bi-ethernet"></i> Connections</h2>
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Device From</th>
+        <th scope="col">Device To</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="
                 let connectionObj of connectionList
                   | paginate
                     : {
@@ -22,53 +18,42 @@
                         currentPage: connectionListPage
                       }
               ">
-              <td tooltip="{{ connectionObj.id }}">{{ connectionObj.name }}</td>
-              <td>
-                <a href="/edit-device/{{ connectionObj.deviceIdFrom }}">
-                  <i class="bi bi-box"></i> {{ this.findDeviceName(connectionObj.deviceIdFrom) }}
-                </a>
-                <div class="deviceid">{{ connectionObj.deviceIdFrom }}</div>
-              </td>
-              <td>
-                <a href="/edit-device/{{ connectionObj.deviceIdTo }}">
-                  <i class="bi bi-box"></i> {{ this.findDeviceName(connectionObj.deviceIdTo) }}
-                </a>
-                <div class="deviceid">{{ connectionObj.deviceIdTo }}</div>
-              </td>
-              <td>
-                <div class="btn-group" role="group" aria-label="connection-operations">
-                  <button
-                    type="button"
-                    class="btn btn-success btn-sm move-right"
-                    id="edit-connection"
-                    (click)="EditForm(connectionObj)">
-                    Edit
-                  </button>
-                  <button
-                    type="button"
-                    id="delete-connection"
-                    class="btn btn-danger btn-sm"
-                    (click)="deleteConnection(connectionObj.id)">
-                    Delete
-                  </button>
-                  <button
-                    type="button"
-                    id="clone-connection"
-                    class="btn btn-info btn-sm"
-                    (click)="CloneConnection(connectionObj.id)">
-                    Clone
-                  </button>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <button type="button" class="btn btn-success btn-sm move-right mb-3" (click)="AddForm()">
-          <i class="bi bi-plus-lg"></i> Add
-        </button>
-      </div>
-    </div>
-  </div>
+        <td tooltip="{{ connectionObj.id }}">{{ connectionObj.name }}</td>
+        <td>
+          <a href="/edit-device/{{ connectionObj.deviceIdFrom }}">
+            <i class="bi bi-box"></i> {{ this.findDeviceName(connectionObj.deviceIdFrom) }}
+          </a>
+          <div class="deviceid">{{ connectionObj.deviceIdFrom }}</div>
+        </td>
+        <td>
+          <a href="/edit-device/{{ connectionObj.deviceIdTo }}">
+            <i class="bi bi-box"></i> {{ this.findDeviceName(connectionObj.deviceIdTo) }}
+          </a>
+          <div class="deviceid">{{ connectionObj.deviceIdTo }}</div>
+        </td>
+        <td>
+          <div class="btn-group" role="group" aria-label="connection-operations">
+            <button type="button" class="btn btn-success btn-sm move-right" id="edit-connection"
+              (click)="EditForm(connectionObj)">
+              Edit
+            </button>
+            <button type="button" id="delete-connection" class="btn btn-danger btn-sm"
+              (click)="deleteConnection(connectionObj.id)">
+              Delete
+            </button>
+            <button type="button" id="clone-connection" class="btn btn-info btn-sm"
+              (click)="CloneConnection(connectionObj.id)">
+              Clone
+            </button>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <button type="button" class="btn btn-success btn-sm move-right mb-3" (click)="AddForm()">
+    <i class="bi bi-plus-lg"></i> Add
+  </button>
   <pagination-controls (pageChange)="connectionListPage = $event" id="connectionPagination"></pagination-controls>
 </div>
+
 <app-log [component]="component"></app-log>
