--- a/src/app/components/devices/devices-list/devices-list.component.html
+++ b/src/app/components/devices/devices-list/devices-list.component.html
@@ -1,62 +1,52 @@
 <div class="container wrapper">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="inner">
-        <h4>Devices</h4>
-        <table class="table table-striped table-hover">
-          <thead>
-            <tr>
-              <th scope="col">Name</th>
-              <th scope="col">Position</th>
-              <th scope="col">Model</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor=" let device of deviceList | paginate
+  <div class="inner">
+    <h3><i class="bi bi-hdd"></i> Devices</h3>
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Position</th>
+          <th scope="col">Model</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor=" let device of deviceList | paginate
                     : {
                         id: 'devicePagination',
                         itemsPerPage: 5,
                         currentPage: deviceListPage
                       }
               ">
-              <td tooltip="{{ device.id }}">{{ device.name }}</td>
-              <td>
-                ({{ device.position.x }}, {{ device.position.y }}, {{
-                device.position.h }})
-              </td>
-              <td tooltip="{{ device.modelId }}">{{
-                this.findModelName(device.modelId) }}</td>
-              <td>
-                <div class="btn-group" role="group"
-                  aria-label="device-operations">
-                  <button type="button"
-                    class="btn btn-success btn-sm move-right" id="edit-device"
-                    (click)="EditForm(device)">
-                    Edit
-                  </button>
-                  <button type="button" id="delete-device"
-                    class="btn btn-danger btn-sm"
-                    (click)="DeleteDevice(device.id)">
-                    Delete
-                  </button>
-                  <button type="button" id="clone-device"
-                    class="btn btn-info btn-sm"
-                    (click)="CloneDevice(device.id)">
-                    Clone
-                  </button>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <button type="button" class="btn btn-success btn-sm move-right mb-3"
-          (click)="AddForm()">
-          <i class="bi bi-plus-lg"></i> Add
-        </button>
-      </div>
-    </div>
+          <td tooltip="{{ device.id }}">{{ device.name }}</td>
+          <td>
+            ({{ device.position.x }}, {{ device.position.y }}, {{
+            device.position.h }})
+          </td>
+          <td tooltip="{{ device.modelId }}">{{
+            this.findModelName(device.modelId) }}</td>
+          <td>
+            <div class="btn-group" role="group" aria-label="device-operations">
+              <button type="button" class="btn btn-success btn-sm move-right" id="edit-device"
+                (click)="EditForm(device)">
+                Edit
+              </button>
+              <button type="button" id="delete-device" class="btn btn-danger btn-sm"
+                (click)="DeleteDevice(device.id)">
+                Delete
+              </button>
+              <button type="button" id="clone-device" class="btn btn-info btn-sm" (click)="CloneDevice(device.id)">
+                Clone
+              </button>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <button type="button" class="btn btn-success btn-sm move-right mb-3" (click)="AddForm()">
+      <i class="bi bi-plus-lg"></i> Add
+    </button>
   </div>
-  <pagination-controls (pageChange)="deviceListPage = $event"
-    id="devicePagination"></pagination-controls>
+  <pagination-controls (pageChange)="deviceListPage = $event" id="devicePagination"></pagination-controls>
 </div>
+
 <app-log [component]="component"></app-log>
