--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="col-md-12">
-    <h3>Edit Device</h3>
+    <h3><i class="bi bi-hdd"></i> Edit Device</h3>
     <form [formGroup]="editDeviceForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
       <div class="row">
         <div class="col">
@@ -49,7 +49,8 @@
           </div>
         </div>
       </div>
-      <div class="row" formGroupName="position">
+      <div class="row" formGroupName="position" class="row border">
+        <div class="row">Position</div>
         <div class="col">
           <div class="form-group mb-3">
             <label for="x" class="form-label">x</label>
@@ -64,6 +65,9 @@
                 'is-valid': this.editDeviceForm.controls.position.controls.x.status == 'VALID',
                 'form-control': true
               }" />
+          </div>
+          <div *ngIf="this.editDeviceForm.controls.position.controls.x.errors" class="invalid-feedback">
+            <div *ngIf="this.editDeviceForm.controls.position.controls.x.errors.required">Name is required</div>
           </div>
         </div>
         <div class="col">
@@ -81,6 +85,9 @@
                 'form-control': true
               }" />
           </div>
+          <div *ngIf="this.editDeviceForm.controls.position.controls.y.errors" class="invalid-feedback">
+            <div *ngIf="this.editDeviceForm.controls.position.controls.y.errors.required">Name is required</div>
+          </div>
         </div>
         <div class="col">
           <div class="form-group mb-3">
@@ -96,6 +103,9 @@
                 'is-valid': this.editDeviceForm.controls.position.controls.h.status == 'VALID',
                 'form-control': true
               }" />
+          </div>
+          <div *ngIf="this.editDeviceForm.controls.position.controls.h.hasError" class="invalid-feedback">
+            <div *ngIf="this.editDeviceForm.controls.position.controls.h.hasError('required')">Name is required</div>
           </div>
         </div>
       </div>
@@ -118,6 +128,9 @@
                 {{ modelObj.name }}
               </option>
             </select>
+            <div *ngIf="this.editDeviceForm.controls.modelId.errors" class="invalid-feedback">
+              <div *ngIf="this.editDeviceForm.controls.modelId.errors.required">Name is required</div>
+            </div>
           </div>
         </div>
       </div>
