--- a/src/app/components/models/edit-model/edit-model.component.html
+++ b/src/app/components/models/edit-model/edit-model.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h3>Edit Model</h3>
+      <h3><i class="bi bi-motherboard"></i> Edit Model</h3>
       <form [formGroup]="editModelForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
         <div class="row">
           <div class="col">
@@ -11,9 +11,10 @@
                 type="text"
                 formControlName="id"
                 id="form-id"
-                maxlength="100"
                 minlength="1"
                 required
+                readonly
+                [maxLength]="36"
                 [ngClass]="{
                   'is-invalid': this.editModelForm.controls.id.status != 'VALID',
                   'is-valid': this.editModelForm.controls.id.status == 'VALID',
