--- a/src/app/components/models/models-list/models-list.component.html
+++ b/src/app/components/models/models-list/models-list.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="inner">
-        <h3>Models</h3>
+        <h3><i class="bi bi-motherboard"></i> Models</h3>
         <table class="table table-striped table-hover">
           <thead>
             <tr>
