--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,15 +4,26 @@ body {
   height: 100vh;
 }
 .log-message {
-  margin-top: 4px;;
+  margin-top: 4px;
   color: #9a9aa7;
   font-size: small;
 }
 
 .error-message {
-  margin-top: 4px;;
+  margin-top: 4px;
   font-size: 0.875em;
   color: var(--bs-form-invalid-color);
 }
+
+.border {
+  padding: 1rem;
+  margin-right: 0;
+  margin-left: 0;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border-width: 1px;
+  border-radius: 8px;
+}
+
 @import '../node_modules/bootstrap-icons/font/bootstrap-icons';
-@import "../node_modules/bootstrap/scss/bootstrap";
+@import '../node_modules/bootstrap/scss/bootstrap';
